samples/_failures_safe/1761396220_d493d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8bea1e8c.c: In function ‘main’:
./samples/SAFE/__tmp_8bea1e8c.c:189:9: error: expected expression at end of input
  189 |         if (command == 'd' && strlen(input) >= 2)
      |         ^~
./samples/SAFE/__tmp_8bea1e8c.c:189:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8bea1e8c.c:189:9: error: expected declaration or statement at end of input
